fixed extra space in article

--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -15,6 +15,7 @@
   padding-right: 24px;
   padding-left: 24px;
   margin-top: 0;
+  /* margin: 0; */
   /* height: 100%; */
 }
 
@@ -23,7 +24,7 @@
   font-size: 18px;
   line-height: 24px;
   color: #b6bcbf;
-  margin-top: 20px;
+  margin-top: 17px;
   margin-bottom: 0;
   text-align: left;
   /* padding-left: ; */
@@ -35,6 +36,8 @@
   font-family: "Roboto";
   font-weight: 400;
   font-size: 26px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .article__info_text {
@@ -47,6 +50,8 @@
   text-overflow: ellipsis;
   max-width: 352px;
   max-height: 110px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .article__key-word-label {
@@ -86,14 +91,15 @@
   padding: 11px 10px 13px 13px;
   z-index: 1;
   position: absolute;
-  top: -250px;
+  top: 10px;
   /* right: 60px; */
-  left: 150px;
+  left: 300px;
   border: 2px solid #b6bcbf;
   border-radius: 8px;
   /* cursor: pointer; */
-  position: relative;
+  /* position: relative; */
   border-bottom: 1px dotted black;
+  /* margin: 0; */
 }
 
 .article__save-btn:hover {
